tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-function-body.diagnostic
diagnostic error code=P0001 family=parser message="expected function body or ; after function declaration" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-function-body.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-function-body.ari" bytes=52
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-function-body.ari" line=2 column=1 end_line=2 end_column=3 byte_start=19 byte_end=21 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-function-body.ari:2:1\n   |\n 2 | fn main() -> i64 {\n   | ^^"
